j--/tests/fail/package-info.java
/**
 * Le package fail de test
 */
package fail;